# alica-codegen

./: .gitignore  README.md  pom.xml
.github/workflows/: maven.yml
alica-codegen-core/: pom.xml
alica-codegen-cpp/: pom.xml
alica-codegen-cpp/src/main/antlr4/: Comments.g4
alica-codegen-cpp/src/main/resources/: ui.fxml
alica-codegen-cpp/src/test/java/: CodegenCppTest.java
alica-codegen-cpp/src/test/resources/testProject/: CMakeLists.txt
alica-codegen-cpp/src/test/resources/testProject/engine/engine/: BasicBehaviour.h  BasicCondition.h  BasicConstraint.h  BasicPlan.h  BasicUtilityFunction.h  DefaultUtilityFunction.h  IBehaviourCreator.h  IConditionCreator.h  IConstraintCreator.h  IUtilityCreator.h  ProblemDescriptor.h  RunningPlan.h  UtilityFunction.h
alica-codegen-java/: pom.xml
alica-codegen-java/src/main/resources/: ui.fxml
alica-codegen-java/src/test/java/: CodegenJavaTest.java
alica-codegen-java/src/test/resources/testProject/: pom.xml
alica-codegen-model/: pom.xml
alica-codegen-modelmanagement/: pom.xml
alica-codegen-python/: README.md  pom.xml
alica-codegen-python/src/main/resources/: ui.fxml
alica-codegen-python/src/test/java/: CodegenPythonTest.java
alica-codegen-python/src/test/resources/testProject/engine/: __init__.py  basic_behaviour.py  basic_condition.py  basic_constraint.py  basic_plan.py  basic_utility_function.py  default_utility_function.py  problem_descriptor.py  running_plan.py  utility_function.py
alica-codegen-python/src/test/resources/testProject/test/: test_behaviour_creator.py
(+89 files in other folders)
